--- a/src/assets/scss/general/theme.scss
+++ b/src/assets/scss/general/theme.scss
@@ -1,100 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: calc(30px - .2em) 30px;
-  font-family: "Favorit", Helvetica, sans-serif;
-  font-size: 10px;
-  letter-spacing: 0.1em;
-  line-height: 1.4em;
-  background-color: #f7f7f7;
-  overflow: hidden;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  text-transform: uppercase;
-  font-size: unset;
-  letter-spacing: unset;
-  font-weight: unset;
-  line-height: 1.4em;
-  margin: 0;
-}
-
-p {
-  margin: 0;
-}
-
-a {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: unset;
-  &:hover {
-    color: unset;
-    opacity: 0.6;
-  }
-}
-
-ul {
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  & > li {
-    padding-right: 0.5em;
-    list-style: none;
-  }
-}
-
-header {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  column-gap: 30px;
-  position: absolute;
-  // z-index: 2;
-  left: 0;
-  top: 0;
-  width: calc(100% - 60px);
-  padding: calc(30px - .2em) 30px;
-  line-height: 1.4em;
-  & > .header-content {
-    z-index: 3;
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
-  & > .header-space {
-    grid-column-start: 3;
-    grid-column-end: 8;
-  }
-}
-
-main {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  column-gap: 30px;
-//   z-index: 1;
-  & > * {
-    // z-index: 1;
-  }
-}
-
-@media only screen and (max-width: 980px) {
-  body {
-    margin: 0;
-    overflow: scroll;
-  }
-
-  header,
-  main {
-    display: block;
-    padding: 20px 20px 0 20px;
-  }
-
-  main {
-    padding-top: 100px;
-  }
-
-  header {
-      z-index: 5;
-  }
+  font-family: "RoadizSans", "Helvetica", sans-serif;
 }
