update theme header

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,10 @@
 /*
-Theme Name: NDS
-Theme URI: nicolettadalfino.com
-Description: Portfolio Theme for Nicoletta Dalfino Spinelli
+Theme Name: Flexcomponents
+Theme URI: arnespremberg.com
+Description: A component based theme boilerplate for WordPress based on Advanced Custom Fields' flexible content field
 Author: Arne Spremberg
 Author URI: www.arnespremberg.com
-Version: 0.1.4
+Version: 0.5
 License: GNU
 License URI:
-Tags: Portfolio
-
-
 */
